# blockchain-voting-system

./: .gitignore
docs/: Overseas_Voting_System.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ballot/: Cargo.toml
pallets/ballot/src/: lib.rs  mock.rs  tests.rs
pallets/candidate/: Cargo.toml
pallets/candidate/src/: lib.rs
pallets/election/: Cargo.toml
pallets/election/src/: lib.rs  mock.rs  tests.rs
pallets/voter/: Cargo.toml
pallets/voter/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: b1.rs  lib.rs  zkp.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
